# Pipeline-for-PromptHallucinationReductions

./: .env.example  .gitignore  README.md  dataset.py  depricated_pipeline.py.old  evaluate.py  gate_config_examples.py  main.py  models.py  pipeline.py  pipeline_config.py  pyproject.toml  requirements.txt  stages.py  utils.py
data/: README.md  loaders.py
experiments/: logging.py  metrics.py  run.py
logs/: run-20250826-190920.jsonl  run-20250826-200858.jsonl  run-20250827-015141.jsonl  trace_20250818_182749.jsonl  trace_20250820_000325.jsonl  trace_20250820_163322.jsonl  trace_20250820_163707.jsonl
runs/: analysis_20250824_224830.json  trace_20250823_220957.jsonl  trace_20250823_221231.jsonl  trace_20250824_224830.jsonl
runs/simpleqa/apo/: per_sample.csv  per_stage.csv  summary.json
runs/simpleqa/apo_cove/: per_sample.csv  per_stage.csv  summary.json
runs/simpleqa/apo_cove_sc/: per_sample.csv  per_stage.csv  summary.json
runs/simpleqa/baseline/: per_sample.csv  per_stage.csv  summary.json
runs/simpleqa/full/: per_sample.csv  per_stage.csv  summary.json
scripts/: analyze_results.py  main.py  run_dashboard.py
src/: __init__.py  core_types.py  gates.py  models.py  pipeline.py  stages.py  templates.py
src/analytics/: analysis.py  tracking.py  visualization.py
src/core/: core_types.py  gates.py  models.py  pipeline.py  stages.py  templates.py
src/dashboard/: dashboard.py
testing/: testAPI.py
